# lib/api-spec/openapi.yaml
@@ -196,11 +196,19 @@ components:
         poster:
           type: string
           nullable: true
+        backdrop:
+          type: string
+          nullable: true
         overview:
           type: string
           nullable: true
         rating:
           type: number
+          nullable: true
+        genres:
+          type: array
+          items:
+            type: string
           nullable: true
       required:
         - tmdbId
@@ -236,11 +244,19 @@ components:
         poster:
           type: string
           nullable: true
+        backdrop:
+          type: string
+          nullable: true
         overview:
           type: string
           nullable: true
         rating:
           type: number
+          nullable: true
+        genres:
+          type: array
+          items:
+            type: string
           nullable: true
         providers:
           type: array
